# feldfreund_devkit

./: .copier-answers.yml  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Feldfreund_devkit.code-workspace  Makefile  README.md  fetch_milestone.py  findings.md  generate_reference.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
config/: example.py
contributing/: index.html
docs/: CNAME  contributing.md  generate_reference.py  getting_started.md  index.md  troubleshooting.md
docs/stylesheets/: extra.css
docs/tutorials/: imu_calibration.md  odrive_calibration.md  tutorials.md
feldfreund_devkit/: .syncignore  __init__.py  camera_provider.py  entity_locator.py  feldfreund.py  implement.py  log_configuration.py  robot_locator.py  secrets.py  system.py  target_locator.py  version.py
feldfreund_devkit/api/: __init__.py  online.py
feldfreund_devkit/config/: __init__.py  battery_configuration.py  bluetooth_configuration.py  bumper_configuration.py  camera_configuration.py  can_configuration.py  estop_configuration.py  feldfreund_configuration.py  flashlight_configuration.py  gnss_configuration.py  headlights_configuration.py  implement_configuration.py  imu_configuration.py  robot_brain_configuration.py  robot_footprint.py  secrets.py  tracks_configuration.py
feldfreund_devkit/hardware/: __init__.py  feldfreund.py  flashlight.py  headlights.py  implement_hardware.py  safety.py  teltonika_router.py  tracks.py
feldfreund_devkit/hardware/tracks/: __init__.py  tracks_hardware.py  tracks_simulation.py
feldfreund_devkit/implements/: __init__.py  implement.py
feldfreund_devkit/interface/components/: __init__.py  confirm_dialog.py  header_bar.py  log_monitor.py  status_bulb.py  teltonika_status_widget.py  teltonika_ui.py  track_recorder_dialog.py
feldfreund_devkit/navigation/: __init__.py  drive_segment.py  recorded_track.py  recorded_track_navigation.py  straight_line_navigation.py  track_recording_controller.py  utils.py  waypoint_navigation.py
feldfreund_devkit/testing/: __init__.py  fixtures.py  helpers.py
getting_started/: index.html
odrive/: README.md  calibrate_two_motors_l.py  calibrate_two_motors_r.py  calibration.liz
reference/SUMMARY/: index.html
reference/feldfreund_devkit/api/: index.html
reference/feldfreund_devkit/config/: index.html
reference/feldfreund_devkit/hardware/: index.html
reference/feldfreund_devkit/interface/components/: index.html
reference/feldfreund_devkit/navigation/: index.html
search/: search_index.json
tests/: conftest.py  test_camera_provider.py  test_gnss.py  test_navigation.py  test_recorded_track.py  test_recorder_dialog.py  test_robot_footprint.py  test_robot_locator.py  test_teltonika_router.py
troubleshooting/: index.html
tutorials/imu_calibration/: index.html
tutorials/odrive_calibration/: index.html
tutorials/tutorials/: index.html
