[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "feldfreund_devkit"
version = "0.0.0"
description = "TODO"
authors = [{ name="Zauberzeug GmbH", email="feldfreund@zauberzeug.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "nicegui (>= 3.2.0, <4.0.0)",
    "rosys @ git+https://github.com/zauberzeug/rosys.git@03229377a5626535cc7258c9e16fb9ceb7962123",
    "httpx >=0.25.0",
    "coloredlogs",
    "httpcore",
    "psutil",
]

[dependency-groups]
dev = [
    "mypy (>=1.18.2, <2.0.0)",
    "pylint (>=3.3.3, <4.0.0)",
    "pre-commit (>=4.3.0, <5.0.0)",
    "ruff (>=0.13.2, <1.0.0)",
    "autopep8 (>=2.3.2, <3.0.0)",
    "poetry-dynamic-versioning (>=1.8.0, <2.0.0)",
]
test = [
    "pytest (>=8.3.4, <9.0.0)",
    "pytest-asyncio (>=0.25.3, <0.26.0)",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.mypy]
python_version = "3.12"
install_types = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "coloredlogs",
]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "C0103", # Invalid name (e.g., variable/function/class naming conventions)
    "C0111", # Missing docstring (in function/class/method)
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long (exceeds character limit)
    "R0902", # Too many public methods
    "R0903", # Too few public methods
    "R0904", # Too many public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R0917", # Too many positional arguments
    "W0511", # TODO: comments
    "W0718", # Catching too general exception
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "B", # bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PL", # pylint
    "RUF", # ruff
    "UP", # pyupgrade
    "W", # pycodestyle
]
fixable = [
    "I", # isort
    "RUF022", # `__all__` is not sorted
]
ignore = [
    "E501", # line too long
    "B024", # abstract base class without abstract methods
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# NOTE: changing default location of pytest_cache because the uvicorn file watcher somehow triggered too many reloads
cache_dir = "../.pytest_cache"
testpaths = [
    "tests"
]
